--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -468,3 +468,17 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@book{gamma1995design,
+  title={{D}esign {P}atterns: {E}lements of {R}eusable {O}bject-{O}riented {S}oftware},
+  author={Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
+  year={1995},
+  publisher={Addison-Wesley Professional}
+}
+@inproceedings{mesbah2007architectural,
+  title={{A}n {A}rchitectural {S}tyle for {A}jax},
+  author={Mesbah, A. and Van Deursen, A.},
+  booktitle={Software Architecture, 2007. WICSA'07. The Working IEEE/IFIP Conference on},
+  pages={9--9},
+  year={2007},
+  organization={IEEE}
+}
