--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -154,13 +154,12 @@ seen as impractical for the real world, a group of web browser vendors
 and other interested parties had a competing vision of the future of
 the Web: evolving HTML4 to include additional features maintaining
 backward compatibility. W3C members did not agree with this vision,
-and as a result, the WHAT Working Group was
-born. \cite{pilgrim2010html5}
+and as a result, the WHAT Working Group was born. \abbr{WHATWG} is a
+``loose, unofficial, and open collaboration of Web browser
+manufacturers and interested
+parties''\footnote{\url{http://www.whatwg.org/news/start}}. \cite{pilgrim2010html5}
 
-\abbr{WHATWG} is a ``loose, unofficial, and open collaboration of Web
-browser manufacturers and interested
-parties''\footnote{\url{http://www.whatwg.org/news/start}}. According
-to a
+According to a
 study\footnote{\url{http://dev.opera.com/articles/view/mama-key-findings/}}
 made by Opera in 2008, more than 95\% of web sites do not pass markup
 validation. Therefore, to maintain backward compatibility and
@@ -199,9 +198,9 @@ HTML5 defines several new elements and attributes. The objective is to
 make the markup more semantic for developers and for content
 processors such as search engines and screen readers.
 
-The specification aims for more semantic structure of HTML by dropping
-many presentational features. The rationale behind this is explained
-with the following reasons \cite{HTML5draft}:
+The specification aims for a more semantic structure of HTML by
+dropping many presentational features. The rationale behind this is
+explained with the following reasons \cite{HTML5draft}:
 
 \begin{itemize}
 \item Media-independent markup works for more users and yields better
@@ -216,13 +215,13 @@ that group elements with similar characteristics \cite{HTML5draft}:
 
 \begin{itemize}
 \item \textbf{Metadata content:} Content that sets the behavior of the
-  document, sets relationships to other documents, or conveys other
-  information of the document.
+  document, sets its relationships to other documents, or conveys
+  other information of the document.
 
   \textit{Examples:} \texttt{link}, \texttt{meta}, \texttt{script},
   \texttt{title}
 
-\item \textbf{Flow content:} Most content that are used in the body of
+\item \textbf{Flow content:} Most content that is used in the body of
   a document.
 
   \textit{Examples:} \texttt{a}, \texttt{article}, \texttt{audio},
@@ -288,7 +287,7 @@ Multimedia support is crucial for modern applications. HTML5 defines
 elements and APIs for audio, video, subtitles, and embedded content.
 
 Previously to use these rich content types, developers have had to
-rely on third party plugins and browser extensions. Not having to rely
+rely on third-party plugins and browser extensions. Not having to rely
 on plugins and extensions has been one of the main goals of the HTML5
 standard for improving the openness and accessibility of web content.
 
@@ -316,9 +315,9 @@ enhance and fix some of these problems.
 HTML5 brings several enhancements to forms. New input types for
 numbers, dates, email addresses, etc. obsolete the need of scripted
 widgets by using native platform controls. New form attributes like
-placeholder and autofocus bring easy-to-use accessibility and
-usability improvements and also diminish the need for
-scripting. \cite{HTML5draft}
+\texttt{placeholder} and \texttt{autofocus} bring easy-to-use
+accessibility and usability improvements and also diminish the need
+for scripting. \cite{HTML5draft}
 
 These additions and enhancements work especially well in mobile
 context where user input is slow and cumbersome. For example, by
@@ -351,21 +350,23 @@ without extra page refreshes. \cite{HTML5draft}
 By design, web sites have always needed a working network
 connection. Applications, however, should be able to work offline or
 in unreliable and flaky networks. Especially mobile networks are
-unreliable \citationneeded, which has brought the need for offline
+unreliable \citationneeded, which has raised the need for offline
 support in HTML5.
 
 There are several ways to enable offline support in HTML5
 applications. We present these approaches in the following sections.
 
 \subsubsection{Application Cache}
+\label{section:appcache}
 
 \abbr{AppCache} is a relatively simple way to indicate all resources
 needed for offline functionality. A manifest file is defined in the
 HTML document, and within the file there are sections for resources
-that should always or never be cached and fallback \abbr{URLs} for
-resources that are not cached but the fetching fails. In addition to
-the simple manifest file listing offline resources, JavaScript events
-are defined for cache events.\cite{HTML5draft} \\
+that should always or never be cached as well as fallback \abbr{URLs}
+for resources that are not cached but with which the fetching
+fails. In addition to the simple manifest file listing offline
+resources, JavaScript events are defined for cache
+changes. \cite{HTML5draft} \\
 
 \noindent \textbf{Example manifest file:}
 \begin{verbatim}
@@ -407,17 +408,17 @@ data. \cite{webstoragedraft}
 Two more expressive storage \abbr{APIs} have been specified: client
 side \abbr{SQL} database \cite{webstoragedraft} and the Indexed
 Database \cite{indexedDBdraft}. The client side SQL database defines
-an asynchronous and transactional SQL database JavaScript
-API. Although being very expressive, due to the relative complexity
-compared to simple and scalable key/value storage options, it is yet
-to be seen if the client side SQL storage will be accepted by the
-browser vendors and developers.
+an asynchronous and transactional JavaScript API for a SQL
+database. Although being very expressive, due to the relative
+complexity compared to simple and scalable key/value storage options,
+it is yet to be seen if the client side SQL storage will be accepted
+by the browser vendors and developers.
 
 Indexed Database provides synchronous and asynchronous APIs for
-storing and searching large amounts of structured data. The
+storing and querying large amounts of structured data. The
 transactional API can be used for more complex persistency needs than
 with the simple key/value storages, and it provides a native
-JavaScript API that does not involve the complexities of SQL.
+JavaScript API that does not involve the relative complexities of SQL.
 
 \subsubsection{Detecting Network State}
 
@@ -435,7 +436,7 @@ make requests and wait for the response or possible failure.
 
 Therefore, applications should be designed to expect the network to
 work, but to degrade gracefully when the connection is lost or seems
-to be flaky.
+to be unreliable.
 
 \subsection{Drag and Drop}
 \label{section:dragdrop}
@@ -470,7 +471,7 @@ HTML5 document with the \texttt{math} element.
 
 Both of these languages reduce the need of custom images, making the
 content more accessible, dynamic, and enabling dynamic interaction
-with it. Also, vector graphics can be scaled and fit the available
+with it. Also, vector graphics can be scaled to fit the available
 space no matter the screen size, which improves the cross-platform
 usefulness for different device form factors.
 
@@ -498,6 +499,8 @@ for example, rich user interface animation effects lets developers
 optimize the responsiveness and performance of their applications
 since the browser can use the most efficient techniques of the
 platform to handle these effects.
+
+\fixme{add intro to the following list}
 
 \begin{itemize}
 
@@ -541,12 +544,12 @@ platform to handle these effects.
   transitions, but for more complex series of changes, CSS animations
   \cite{CSSanimations} can be used.
 
-  The animations specification defines so called keyframes, which can
+  The animations specification defines so-called keyframes, which can
   be used to specify the progress of the animation between the start
-  and the end. Animations can also be configured to repeat a certain
-  number of times, to alternate between the begin and end values, to
-  control the running and paused states, and to delay the start
-  time. \cite{CSSanimations}
+  and the end states. Animations can also be configured to repeat a
+  certain number of times, to alternate between the begin and end
+  values, to control the running and paused states, and to delay the
+  start time. \cite{CSSanimations}
 
 \item \textbf{Media Queries}
 
@@ -585,9 +588,10 @@ WebGL is a low-level 3D rendering API derived from the OpenGL® ES 2.0
 \cite{OpenGL} and it is designed as a rendering context for the
 \texttt{canvas} element introduced in HTML5. An interactive 3D
 graphics API in the browser is essential for game development and
-creates global platform for cross-platform games. WebGL was originally
-developed by the Khronos Group\footnote{\url{http://www.khronos.org/}}
-and later participated by browser vendors and 3D
+creates a global platform for cross-platform games. WebGL was
+originally developed by the Khronos
+Group\footnote{\url{http://www.khronos.org/}} and later the
+specification work was participated by browser vendors and 3D
 developers. \cite{WebGL}
 
 Being based on the OpenGL ES API, WebGL can run on many different
@@ -597,7 +601,7 @@ used in 3D modeling and design tools, simulations, data visualization,
 or in interactive art.
 
 Originated from the WebGL specification, typed arrays have been
-separated into a separate specification
+separated into a distinct specification
 \cite{TypedArrays}. Traditional JavaScript arrays are not typed, but
 due to performance reasons, WebGL API needed more efficient data
 structures for 3D graphics. These typed arrays can also be used in
@@ -725,13 +729,14 @@ be an overkill solution and a mismatch to the simplicity and backward
 compatibility requirements of the Web.
 
 JavaScript is by design single-threaded with an asynchronous event
-model. The whole user interface also runs in the same thread, and thus
-long running JavaScript code freezes the whole interface during
-processing. The traditional approach has been to split the code into
-small enough pieces, and let the browser handle the scheduling of user
-interface events and JavaScript processing. This programming model is
-very hard, and combined with unpredictable browser garbage collection,
-user interface freezing might be hard to avoid. \cite{souders2009even}
+model. The whole user interface also runs in the same thread, and
+therefore long running JavaScript code freezes the whole interface
+during processing. The traditional approach has been to split the code
+into small enough pieces, and let the browser handle the scheduling of
+user interface events and JavaScript processing. This programming
+model is very hard, and combined with unpredictable browser garbage
+collection, user interface freezing might be hard to
+avoid. \cite{souders2009even}
 
 Web Workers are the proposed solution for parallel computing in
 JavaScript. They introduce a simple interface for sandboxed components
@@ -741,9 +746,9 @@ application. \cite{WebWorkers}
 
 Web Workers are external JavaScript files initialized from a web
 site. The worker runs in a separate \abbr{OS}-level thread and does
-not affect the main \abbr{UI} thread apart from the communication
-channel. The simple API is easy to work with and gives the long-needed
-ability of parallel computation in web applications.
+not affect the main user interface thread apart from the communication
+channel. The simple API is easy to work with and enables the
+long-needed ability of parallel computation in web applications.
 
 \subsection{Analytics and Timing}
 
@@ -801,16 +806,17 @@ techniques have been developed to overcome the restrictions. These
 techniques have been unsafe and very limited, so a need for
 cross-domain data sharing has risen.
 
-The Cross-Origin Resource Sharing specification \cite{CORS} extends
-the same-origin policy by allowing the HTTP layer to indicate allowed
-origins for data transfer between separate origins. The specification
-defines new HTTP headers for indicating allowed origins and for
-negotiating access control restrictions with preflight requests.
+The Cross-Origin Resource Sharing (\abbr{CORS}) specification
+\cite{CORS} extends the same-origin policy by allowing the HTTP layer
+to indicate allowed origins for data transfer between separate
+origins. The specification defines new HTTP headers for indicating
+allowed origins and for negotiating access control restrictions with
+preflight requests.
 
 \abbr{CORS} is an important specification for modern web applications,
 since data is very often distributed to different domains, for
 example, when using a content delivery network. It also makes mashup
-development with external data much easier and safer.
+development with external data easier and safer.
 
 Cross-domain resource usage can also be controlled with the means
 defined in the Content Security Policy specification
@@ -830,15 +836,15 @@ cross-document messaging.
 Context is one of the main components or a personalized application
 \cite{fling2009mobile}. Probably the most important aspect affecting
 the context is the physical location of the user. However, only very
-crude and error-prone \abbr{IP} based detection techniques have been
+crude and error-prone \abbr{IP}-based detection techniques have been
 available for web sites.
 
 The Geolocation API defines a standardized JavaScript API for web
 applications to query the location of the user. The API is agnostic of
 the underlying location information sources; the source might usually
 be the \abbr{GPS} chip on a mobile device or a \abbr{WiFi} network
-with a known location. The coordinates and the accuracy of them is
-then provided by the API. \cite{geolocationAPI}
+with a known location. The coordinates and their accuracy is then
+provided by the API. \cite{geolocationAPI}
 
 The implementations usually provide some sort of privacy protection by
 asking the user whether they want to grant the application access to
@@ -885,6 +891,7 @@ vibration, network information, contacts, intents
 \end{figure}
 
 \subsection{Single-Page applications}
+\label{section:single-page-applications}
 
 In recent years, the movement from traditional interlinked documents
 to interactive web applications has had a profound effect on the
@@ -919,6 +926,7 @@ application usage since separate page views do not require a new
 document request.
 
 \subsubsection{JavaScript MVC Libraries}
+\label{section:js-mvc}
 
 Due to the recent trend to move application logic from the backend to
 the frontend, JavaScript code bases have grown into large applications
@@ -1133,10 +1141,10 @@ performance guidelines defined by Souders \cite{souders2007high,
   reduce the number of HTTP requests needed to get all the required
   components.
 
-  There are several ways to reducing the number of needed HTTP
+  There are several ways to reduce the number of needed HTTP
   requests. Combining images into sprites, inlining images, or
-  combining separate JavaScript and CSS files result in fewer
-  components needed to download in a page.
+  combining separate JavaScript and CSS files results in fewer
+  components needed to download on a page.
 
 \item \textbf{Use a Content Delivery Network}
 
@@ -1152,9 +1160,9 @@ performance guidelines defined by Souders \cite{souders2007high,
   caching strategies help browsers to know which resources are valid
   and for how long until they should be updated.
 
-  The Expires header in HTTP tell the client how long a resource is
+  The Expires header in HTTP tells the client how long a resource is
   valid, and especially far future Expires headers reduce the need for
-  downloading an updating the components in a page after the initial
+  downloading and updating the components in a page after the initial
   download.
 
 \item \textbf{Gzip Components}
@@ -1168,8 +1176,8 @@ performance guidelines defined by Souders \cite{souders2007high,
 \item \textbf{Put Stylesheets at the Top}
 
   Putting the CSS files to the top of the document allows the page to
-  load progressively and the browser show visual feedback to the user
-  as early as possible.
+  load progressively and the browser to show visual feedback to the
+  user as early as possible.
 
 \item \textbf{Put Scripts at the Bottom}
 
@@ -1196,14 +1204,14 @@ performance guidelines defined by Souders \cite{souders2007high,
 
 \item \textbf{Reduce DNS Lookups}
 
-  Apart from cached DNS lookups, the browser typically needs 20--120
-  milliseconds to look up the \abbr{IP} address for a given
+  Apart from cached \abbr{DNS} lookups, the browser typically needs
+  20--120 milliseconds to look up the \abbr{IP} address for a given
   hostname. The cache lifetime of a lookup depends on the \abbr{TTL}
   value of the DNS record and having the components of a page
   distributed across several domains might accumulate into a
   noticeable response time.
 
-  There is also a trade off between unique hostnames and allowed
+  There is also a trade-off between unique hostnames and allowed
   parallel connections and therefore these settings should be
   configured based on the application architecture and needs.
 
@@ -1213,7 +1221,7 @@ performance guidelines defined by Souders \cite{souders2007high,
   the web browser as source code, minifying the code reduces the
   required network transfer. Minifiers and obfuscators optimize the
   size of the source code by stripping extra whitespace and comments
-  as well as renaming variable and function names to shorter ones
+  as well as renaming variables and function names to shorter ones
   without changing the interpreted behavior of the code.
 
 \item \textbf{Avoid Redirects}
@@ -1240,7 +1248,13 @@ performance guidelines defined by Souders \cite{souders2007high,
   Highly dynamic web sites have a lot of \abbr{Ajax}
   \cite{garrett2005ajax} functionality, and developers should make
   sure all the requested URLs for data fetching follow the performance
-  best practices such as having the proper caching in place.
+  best practices such as having proper caching in place.
+
+\end{itemize}
+
+\fixme{add break text here and intro to the second book}
+
+\begin{itemize}
 
   % Even Faster Web Sites
 
@@ -1270,7 +1284,7 @@ performance guidelines defined by Souders \cite{souders2007high,
 
 \item \textbf{Positioning Inline Scripts}
 
-  Inline scripts do not introduce a HTTP request, but they can still
+  Inline scripts do not introduce an HTTP request, but they can still
   block parallel downloads of other resources and they might affect
   also the progressive rendering of the page. With the correct
   positioning of the scripts, these problems can be handled properly.
@@ -1280,10 +1294,10 @@ performance guidelines defined by Souders \cite{souders2007high,
   After networking, the obvious place to optimize the runtime speed of
   a web application is the JavaScript code.
 
-  Because the whole \abbr{UI} and the JavaScript code run in the same
-  browser thread, there can be only one thing happening at a
-  time. Long running functions block the UI from updating and can
-  result in bad \abbr{UX}.
+  Because the whole user interface and the JavaScript code run in the
+  same browser thread, there can be only one thing happening at a
+  time. Long running functions block the user interface from updating
+  and can result in bad user experience.
 
   Splitting the running code into properly sized chunks, appropriately
   leveraging the asynchronous patterns of JavaScript in the
@@ -1335,8 +1349,8 @@ performance guidelines defined by Souders \cite{souders2007high,
 
   Iframes enable developers to embed a separate HTML document inside
   another document. They are useful in sandboxing external documents
-  in the same view, but the iframe element is the most expensive DOM
-  element related to the page performance.
+  in the same view, but the \texttt{iframe} element is the most
+  expensive DOM element related to the page performance.
 
 \item \textbf{Simplifying CSS Selectors}
 
