--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -294,7 +294,7 @@
 %  Elli Opas M.Sc. (Tech), Aalto SCI}
 
 % \abbr
-\newcommand{\abbr}[1] {#1 (?)}
+\newcommand{\abbr}[1] {#1}
 % \citationneeded
 \newcommand{\citationneeded} {\ensuremath{^{[ \, citation \; needed \, ]}} }
 
