--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -85,6 +85,7 @@ due to invalid expectations. This is why feature detection is
 generally the recommended option whenever possible.
 
 \subsection{Feature Detection}
+\label{section:feature-detection}
 
 Feature detection is an important concept in Progressive Enhancement
 design (See Section~\ref{subsection:progressive-enhancement}). A lot
