--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -482,3 +482,9 @@
   year={2007},
   organization={IEEE}
 }
+@book{parker2010designing,
+  title={{D}esigning with {P}rogressive {E}nhancement: {B}uilding the {W}eb {T}hat {W}orks for {E}veryone},
+  author={Parker, T. and Toland, P. and Jehl, S. and Wachs, M. C.},
+  year={2010},
+  publisher={New Riders Publishing},
+}
